# ai-playground

./: .gitignore  500-pocs.md  README.md  create-ai-python3-project.sh  detect-axios-rat.sh  install-ai-dev-tools.sh  landing-page.html  leasons-learned.md  run-local-ai.sh
pocs/adwf-memory-game-opus-4.6-v5-final/backend/: Cargo.toml  run.sh
pocs/adwf-memory-game-opus-4.6-v5-final/backend/src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs
pocs/adwf-memory-game-opus-4.6-v5-final/backend/tests/: integration_test.rs
pocs/adwf-twitter-like/: .env  .gitignore  API_DOCUMENTATION.md  Cargo.toml  DATABASE.md  DEPLOYMENT.md  DESIGN_DOC_SYNC_SUMMARY.md  DEVELOPMENT.md  E2E_TESTING.md  E2E_TEST_SUMMARY.md  FILES_CREATED.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_TESTS.md  K6_FILES_SUMMARY.md  K6_PERFORMANCE_TESTS.md  K6_QUICKSTART.md  K6_TESTING_COMPLETE.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TEST_EXECUTION_GUIDE.md  analyze-k6-results.sh  changelog.md  create-admin.sh  create-schema.sh  design-doc.md  generate-performance-report.sh  index.html  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.ts  podman-compose.yml  query-db.sh  run-e2e-tests.sh  run-integration-tests.sh  run-k6-tests.sh  run-single-k6-test.sh  (+13 more)
pocs/adwf-twitter-like-codex/backend/: Cargo.toml
pocs/adwf-twitter-like-codex/backend/src/: main.rs
pocs/adwf-twitter-like-opus-4-6-v3-skill/backend/: Cargo.toml  twitter.db
pocs/adwf-twitter-like-opus-4-6-v3-skill/backend/src/: auth.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs
pocs/adwf-twitter-like-opus-4-6-v3-skill/backend/tests/: integration_test.rs
pocs/adwf-twitter-like-opus-4-6-v4-skill/backend/: Cargo.toml  build.sh  twitter.db
pocs/adwf-twitter-like-opus-4-6-v4-skill/backend/src/: auth.rs  db.rs  errors.rs  main.rs
pocs/adwf-twitter-like-opus-4-6-v5-skill/backend/: Cargo.toml
pocs/adwf-twitter-like-opus-4-6-v5-skill/backend/src/: auth.rs  config.rs  db.rs  main.rs
pocs/adwf-twitter-like/db/: schema.sql
pocs/adwf-twitter-like/e2e/: README.md  auth.spec.ts  comments.spec.ts  feed.spec.ts  follow.spec.ts  navigation.spec.ts  profile.spec.ts  responsive.spec.ts  tweets.spec.ts
pocs/adwf-twitter-like/e2e/helpers/: auth.ts
pocs/adwf-twitter-like/e2e/pages/: HomePage.ts  LoginPage.ts  ProfilePage.ts  TweetDetailPage.ts
pocs/adwf-twitter-like/k6-tests/: README.md  auth-test.js  baseline-test.js  load-test.js  social-interactions-test.js  stress-test.js  tweet-feed-test.js  user-profile-test.js
pocs/adwf-twitter-like/migrations/: 20260209000001_create_users.sql  20260209000002_create_tweets.sql  20260209000003_create_follows.sql  20260209000004_create_likes.sql  20260209000005_create_retweets.sql  20260209000006_create_comments.sql
pocs/adwf-twitter-like/playwright-report/: index.html
pocs/adwf-twitter-like/review/2026-02-09/: code-review.md  features.md  sec-review.md  summary.md
pocs/adwf-twitter-like/src/: App.tsx  config.rs  error.rs  error_test.rs  lib.rs  main.rs  state.rs
pocs/adwf-twitter-like/src/components/: CommentList.tsx  FeedList.tsx  NavigationBar.tsx  TweetCard.tsx  TweetComposer.tsx  UserCard.tsx
pocs/adwf-twitter-like/src/contexts/: AuthContext.tsx
pocs/adwf-twitter-like/src/handlers/: auth.rs  comments.rs  mod.rs  tweets.rs  users.rs
pocs/adwf-twitter-like/src/lib/: api.ts
pocs/adwf-twitter-like/src/middleware/: auth.rs  auth_test.rs
pocs/adwf-twitter-like/tests/: api_test.rs  integration_test.rs  integration_tests.rs  jwt_test.rs  model_validation_test.rs
pocs/agent-drawing-action/backend/: Cargo.toml  guesses.db
pocs/agent-learner-prompt/: Cargo.toml  README.md  build-ui.sh  design-doc.md  memory.txt  run.sh  stop.sh  test.sh
pocs/agent-learner-prompt/agent-learner-prompt/: .gitignore  Cargo.toml  README.md  anti-pattern.txt  build-all.sh  design-doc.md  memory.txt  prompt.md  test.sh  todo.txt
pocs/agent-learner-prompt/src/: main.rs
pocs/agent-learner-prompt/ui/: index.html  package.json  vite.config.ts
pocs/agent-semantic-drift-detector/: Cargo.toml  README.md  drift.db  run.sh
pocs/agent-semantic-drift-detector/src/: main.rs
pocs/agent-werewolf/backend/: Cargo.toml
pocs/agentcore-fun/echoNavy/: .bedrock_agentcore.yaml  .gitignore  README.md  pyproject.toml
pocs/ai-rpg/backend/: Cargo.toml  rpg.db
pocs/bash-pipe-poc/scala2-bazel/: .build.env  .start.env  .stop.env  .tests.env  BUILD.bazel  MODULE.bazel  bash-pipe.env  bazel-bin  bazel-out  bazel-scala2-bazel  bazel-testlogs  clean.sh  result.fragment.json  setup.sh  stop.sh  test.sh
pocs/beads-fun/backend/: Cargo.toml  twitter.db
pocs/claude-code-teams/: Cargo.toml  README.md  run.sh  stop.sh
pocs/claude-code-teams/.omc/: project-memory.json
pocs/claude-code-teams/frontend/: package-lock.json  package.json  vite.config.ts
pocs/claude-code-teams/src/: main.rs
pocs/claude-context-manager/: Cargo.toml  README.md  claude-context-manager  design-doc.md  release.sh
pocs/claude-context-manager/src/: app.rs  backup.rs  catalog.rs  health.rs  main.rs  model.rs  remover.rs  restore.rs  scanner.rs  ui.rs
pocs/copilot_sdk_rust_fun/: Cargo.toml  README.md
pocs/copilot_sdk_rust_fun/src/: main.rs
pocs/crewai-poc/agent_poc_crewai/: README.md  pyproject.toml  report.md
pocs/cursor-v3-poc/backend/: Cargo.toml
pocs/drawing-to-site-agent/backend/: Cargo.toml  projects.db
pocs/flight-agent-mcp/backend/: Cargo.toml
pocs/k8s-sre-agent-operator/operator/: Cargo.toml  Containerfile
pocs/local-agent-orama/backend/: Cargo.toml
pocs/multi-claude/: Cargo.toml  design-doc.md
pocs/multi-claude/src/: app.rs  main.rs
pocs/prompt-score/backend/: Cargo.toml
pocs/rtk-poc/backend/: Cargo.toml
pocs/self-training-machine/backend/: Cargo.toml
pocs/sql-agent-ai/backend/: Cargo.toml
pocs/strongdm-attractor-fun/: .gitignore  Cargo.toml  README.md  pipeline-condition.dot  pipeline-interesting.dot  pipeline-local.dot  pipeline-tool.dot  pipeline.dot
pocs/truth-detector/backend/: Cargo.toml  run.sh  stop.sh  truth_detector.db  truth_detector.db-shm  truth_detector.db-wal
(+6667 files in other folders)
