[package]
name = "twitter-clone"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "migrate", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
bcrypt = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
validator = { version = "0.18", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
http-body-util = "0.1"
