[package]
name = "agent-learner"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
