[package]
name = "main"
version = "1.0.0"
authors = ["Diego.Pacheco"]
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
