[package]
name = "claude-context-manager"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "claude-context-manager"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
flate2 = "1.1.9"
walkdir = "2"
chrono = "0.4"
dirs = "6"
tempfile = "3"