[package]
name = "main"
version = "1.0.0"
authors = ["Diego.Pacheco"]
edition = "2024"

[dependencies]
copilot-sdk = { git = "https://github.com/copilot-community-sdk/copilot-sdk-rust" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
