[workspace]
members = [
    "crates/llm-client",
    "crates/agent-loop",
    "crates/attractor",
    "crates/attractor-cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
