[package]
name = "memory-game-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.9"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
axum = { version = "0.8", features = ["macros"] }
hyper = "1"
