[package]
name = "twitter_like_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
