[package]
name = "twitter-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "twitter-backend"
path = "src/main.rs"

[lib]
name = "twitter_backend"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
