module(name = "scala2_bazel_poc", version = "1.0.0")

bazel_dep(name = "rules_scala", version = "7.2.4")
bazel_dep(name = "rules_jvm_external", version = "6.7")

scala_config = use_extension("@rules_scala//scala/extensions:config.bzl", "scala_config")
scala_config.settings(scala_version = "2.13.18")

scala_deps = use_extension("@rules_scala//scala/extensions:deps.bzl", "scala_deps")
scala_deps.scala()
scala_deps.scalatest()
