[project]
name = "agent_poc_crewai"
version = "0.1.0"
description = "agent-poc-crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.0"
]

[project.scripts]
agent_poc_crewai = "agent_poc_crewai.main:run"
run_crew = "agent_poc_crewai.main:run"
train = "agent_poc_crewai.main:train"
replay = "agent_poc_crewai.main:replay"
test = "agent_poc_crewai.main:test"
run_with_trigger = "agent_poc_crewai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
