[package]
name = "k8s-sre-agent-operator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sre-agent"
path = "src/main.rs"

[[bin]]
name = "kovalski"
path = "src/cli/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kube = { version = "0.98", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
